fix: prevent image squishing on small screen

--- a/src/app/page.css
+++ b/src/app/page.css
@@ -23,10 +23,10 @@ main {
   }
   &.lg {
     @apply -translate-x-1/2 translate-y-1/2;
-    width: 80vw;
-    height: 80vh;
+    width: 90vw;
+    height: 90vh;
     max-width: 72rem;
-    max-height: 80vh;
+    max-height: 90vh;
   }
 }
 .card-img {
